# crypto-data-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml  docker.yml  publish.yml
src/crypto_data_mcp/: __init__.py  coingecko.py  server.py  token_map.py
tests/: test_coingecko.py
